--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -2,4 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #{title} 
+  P FunFact: Dont know how to dance.
